# pyo3-ffi-check

./: .gitignore  Cargo.toml  build.rs  wrapper.h
.github/workflows/: ci.yml
macro/: Cargo.toml
macro/src/: lib.rs
src/: main.rs
