[package]
name = "pyo3-ffi-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3-ffi = { git = "https://github.com/pyo3/pyo3" }
pyo3-ffi-check-macro = { path = "./macro" }
memoffset = "0.6.5"

[workspace]
members = [
    "macro"
]

[build-dependencies]
bindgen = "0.59.2"
pyo3-build-config = { git = "https://github.com/pyo3/pyo3" }
